<resources>
    <string name="app_name">Pop-flake</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="in_theaters">In Theaters</string>
    <string name="top_rated">Top Rated</string>
    <string name="box_office">Box Office</string>
    <string name="film_image">Film Image</string>
    <string name="dark_mode">Dark mode</string>
    <string name="rank">"Rank: "</string>
    <string name="release_date">"Release date: "</string>
    <string name="no_coming_soon_movies">No coming soon movies</string>
    <string name="no_in_theaters_movies">No in theaters movies</string>
    <string name="no_top_rated_movies">No top rated movies</string>
    <string name="no_box_office_movies">No box office movies</string>
    <string name="there_is_no_result">There is no result</string>
    <string name="no_trailer_found">No trailer found!</string>
    <string name="movie_trailer">Movie trailer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="submit_now">Submit now</string>
    <string name="do_you_have_any_problems">Do you have any problems?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="what_is_your_complaint_about">What is your complaint about?</string>
    <string name="submit">Submit</string>
    <string name="complaint_form">Complaint form</string>
    <string name="complaint_message">Complaint message shouldn\'t be empty</string>
    <string name="name">"Name: "</string>
    <string name="anonymous">Anonymous</string>
    <string name="no_posters">There is no movies poster</string>
</resources>