<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iti.android.zoz.pop_flake.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_movieTrailer"
            app:destination="@id/movieTrailer"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_navigation_home_to_movieDetailsWebView"
            app:destination="@id/movieDetailsWebView"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.iti.android.zoz.pop_flake.ui.search.view.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_movieDetailsWebView"
            app:destination="@id/movieDetailsWebView"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/navigation_search"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.iti.android.zoz.pop_flake.ui.settings.view.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/movieTrailer"
        android:name="com.iti.android.zoz.pop_flake.ui.trailer.MovieTrailer"
        android:label="@string/movie_trailer"
        tools:layout="@layout/fragment_movie_trailer">
        <argument
            android:name="movie_id"
            app:argType="string"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailsWebView"
        android:name="com.iti.android.zoz.pop_flake.ui.moviedetails.MovieDetailsWebView"
        android:label="@string/details"
        tools:layout="@layout/fragment_movie_details_web_view">
        <argument
            android:name="movie_id"
            app:argType="string"
            app:nullable="false" />
    </fragment>
</navigation>